test/errors/types2.input.asm
* = $801

!macro foo() {
    lda #0
}
!let a = foo
!let b = a

    rts
